# Robot-Arm

./: .gitignore  README.md
RaspberryPi/: CMakeLists.txt  README.md  armhf-toolchain.cmake  autosync.sh  gpio_servo.py
RaspberryPi/client/: index.html  main.js
RaspberryPi/src/: arducam.cpp  arducam_lws.cpp  arm_lws.cpp  client.cpp  ocv_face_finder.cpp  ocv_harris_corner.cpp  ocv_mat.cpp  ocv_threshold.cpp  ocv_version.cpp  rot_enc.cpp  servo360.cpp  servo_claw.cpp  servo_demo.cpp  servo_smooth.cpp  servo_smooth_array.cpp  servo_test  stepper.cpp  wavetimer.cpp  yolo_dnn.cpp
RaspberryPi/src/XNlib/: a.out  circle_slope_1.txt  gl_app  log.txt  old_code.cpp  test  xn_gpio.hpp  xn_ik.hpp  xn_test.cpp  xn_test_phys.cpp  xn_test_virtual.cpp  xn_test_virtual_egl.cpp  xn_vec.hpp
RaspberryPi/src/XNlib/egl/: egl_info.cpp  egl_tests.cpp  egl_tri.cpp  xn_egl.hpp
RaspberryPi/src/XNlib/opengl/: 3d  3d.cpp  camera.h  egl_tri.cpp  glfw_win.cpp  glm.cpp  hello_triangle.cpp  shader.h  xn_gl.hpp
RaspberryPi/src/XNlib/opengl/glad/include/glad/: glad.h
RaspberryPi/src/XNlib/opengl/glad/src/: glad.c
RaspberryPi/src/XNlib/opengl/shaders/: camera.fs  camera.vs
RaspberryPi/src/XNlib/shaders/: camera.fs  camera.vs
Windows/: README.md
Windows/RobotController/: RobotController.sln  RobotController.vcxproj  RobotController.vcxproj.filters  StreamTest.cpp  in_VID5.xml  out_camera_data2.xml
Windows/RobotController/Debug/: vc142.idb
Windows/RobotController/Debug/RobotController.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RobotController.lastbuildstate
Windows/RobotController/x64/Release/: RobotController.exe.recipe  RobotController.vcxproj.FileListAbsolute.txt  in_VID5.xml  out_camera_data.xml  out_camera_data_small.xml
Windows/RobotController/x64/Release/RobotController.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RobotController.lastbuildstate  RobotController.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/XN_Template/: XN_Template.sln
Windows/XN_Template/XN_Template/: StreamTest.cpp  XN_Template.vcxproj  XN_Template.vcxproj.filters
Windows/XN_Template/XN_Template/x64/Release/: XN_Template.exe.recipe
Windows/XN_Template/XN_Template/x64/Release/XN_Template.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  XN_Template.lastbuildstate  XN_Template.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/XN_Template/x64/Release/: XN_Template.iobj  XN_Template.ipdb
Windows/XNlib/include/: cam_calib.hpp  common.hpp  xn_homo.hpp  xn_net.hpp  xn_yolo.hpp
